src/components/nav/NavigationRailItem.module.css
.inner {
	position: relative;
	display: flex;
	gap: 8px;

	width: max-content;
	min-width: 96px;
	min-height: 64px;
	padding: 6px 20px;

	background: none;
	border: none;
	border-radius: var(--m3-shape-small);
	color: var(--m3c-on-surface-variant);

	cursor: pointer;
	text-decoration: none;
	user-select: none;
	transition: all var(--m3-easing-slow);

	&.active {
		color: var(--m3c-on-secondary-container);
	}

	[data-rail-open="true"] & {
		width: max-content;
		max-width: calc(infinity * 1px);
		min-height: 56px;
		margin-inline: 20px;
		padding: 16px;
	}

	[data-rail-fill="true"] & {
		width: auto;
	}
}

.pill {
	position: absolute;
	top: 6px; /* Offset to be centered */
	left: 20px;
	display: block;

	width: 56px;
	height: 32px;

	border-radius: var(--m3-shape-full);
	transition:
		all var(--m3-easing-spatial),
		left var(--m3-easing-slow);

	.active & {
		background-color: var(--m3c-secondary-container);
	}

	[data-rail-open="true"] & {
		top: 0px;
		left: 0px;
		width: 100%;
		height: 56px;
	}

	/* Pill focus background */
	:focus-visible > &::before {
		background-color: oklab(from var(--m3c-on-surface) l a b / 10%);
		border-radius: var(--m3-shape-full);
		transition: background-color var(--m3-easing-fast);
	}
}

.labelExpanded {
	align-self: center;
	z-index: 1;
	opacity: 0;
	pointer-events: none;
	transition:
		opacity var(--m3-easing-fast),
		max-width var(--m3-easing-slow);
}

.labelCollapsed {
	position: absolute;
	top: 42px;
	left: 48px;
	transform: translateX(-50%);
	transition:
		opacity var(--m3-easing-fast),
		left var(--m3-easing-slow);
}

.icon {
	display: flex;
	z-index: 1;
	padding-inline-start: 16px;
	padding-top: 4px;
	transition: all var(--m3-easing-slow);

	> :global(svg) {
		width: 24px;
		height: 24px;
		color: inherit;
	}
}

/* Open */
[data-rail-open="true"] {
	.labelExpanded {
		opacity: 1;
	}

	.labelCollapsed {
		left: 28px;
		opacity: 0;
	}

	.icon {
		height: 24px;
		padding: 0px;
	}
}

/* Icon-only & not-open */
[data-rail-icon="true"]:not([data-rail-open="true"]) {
	.inner {
		padding-block: 4px;

		.pill {
			top: 4px;
			height: 56px;
		}
	}

	.icon {
		height: 40px;
		padding-top: 16px;
		padding-inline-start: 16px;
	}

	.labelExpanded,
	.labelCollapsed {
		opacity: 0;
	}
}

/* In case you ever need to debug it again (don't, it's not worth it): */

/* .inner {
	outline: 1px solid blue;

	.pill {
		outline: 1px solid red;
	}

	.icon {
		outline: 1px solid green;

		> :global(svg) {
			outline: 1px solid orange;
		}
	}
} */

